tests/toy/neg/000943_mutation.toylang
program a = { if a sleep then sleep; } .
